fix(catalog): restore canonical import and tighten auth